@@ -1,4 +1,6 @@
 0.1740
+    - EXPERIMENTAL update_or_insert need id and primary_key option
+      and added option option
     - insert method created_at and updated_at option can receive scalar reference
     - update method updated_at option can receive scalar reference
     - select column option [COLUMN => ALIAS] syntax is DEPRECATED!
